test/earlyReturn42.slq

def f(const x:𝔹) {
	y:=H(1);
	if x{ return y; }
	return measure(y); /// error
}

def g(const x:𝔹) {
	y:=H(1);
	if x{
		return y;
	}else{
		y := X(y);
	}
	y:=measure(y); /// error
	return y;
}

def h(const x:𝔹){
	while true{
		y:=measure(H(0)); /// error
		if x{ return; }
	}
}
